Fixing buttons on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -61,14 +61,15 @@ h3 {
 
 a {
   text-decoration: none;
-  position: relative;
   cursor: pointer;
+  font-family: 'HKGrotesk', Roboto, sans-serif;
+  font-weight: 700;
 }
 
 a:hover {
   text-decoration: none;
-  position: relative;
   cursor: pointer;
+  color: inherit;
 }
 
 a.fancy {
